Last fixes on mobile design before alpha release

--- a/frontend/src/assets/global.less
+++ b/frontend/src/assets/global.less
@@ -20,8 +20,8 @@
 
 @fu: 1rem;   // Font unit
 @fusm: 0.75rem;
-@fulg: 1.5rem;
-@fuxl: 2rem;
+@fulg: 1.25rem;
+@fuxl: 1.5rem;
 
 @hToolbar: @bu*3;
 @hHeader: @bu*5;
@@ -56,7 +56,7 @@ html {
   -moz-osx-font-smoothing: grayscale;
   color: @tc1;
   background: @colorBackground;
-
+/*
   &:after {
     pointer-events: none;
     @gridColor: fade(cyan, 50%);
@@ -71,6 +71,7 @@ html {
     background-image: linear-gradient(0deg, transparent 95%, @gridColor 95%);
     background-size:@bu @bu;
   }
+  */
 }
 
 body {
@@ -85,6 +86,7 @@ body {
   z-index: 900;
   height: @hHeader;
   background: fade(@colorBackground, 95%);
+  .border-bottom;
 }
 
 a {
@@ -101,9 +103,15 @@ h1 {
   padding: 0 @bu*2;
 }
 h2 {
+  font-size: @fuxl;
+  line-height: @bu*3;
+  font-weight: 500;
+  margin-bottom: @bu;
+}
+h3 {
   font-size: @fulg;
-  line-height: @bu*4;
-  font-weight: 300;
+  line-height: @bu*3;
+  font-weight: 400;
   margin-bottom: @bu;
 }
 p {
